# Plentymarkets_Item_upload

./: .gitignore  .ignore  Instructions.md  README.md  build_new_version.sh  build_windows_version.sh  clean_upload.sh  coding_style_guidelines.md  example_config.txt  fix_log.txt  main.py  product_import.py  pyproject.toml  todo.md
Linux_Version/product_import.build/: .sconsign.dblite  CompiledFrameType.c  CompiledFunctionType.c  InspectPatcher.c  MainProgram.c  MetaPathBasedLoader.c  __constants.c  __frozen.c  __helpers.c  __helpers.h  __internal__.c  module.__main__.c  module.abrt_exception_handler3.c  module.dbus._compat.c  module.dbus._dbus.c  module.dbus._expat_introspect_parser.c  module.dbus.bus.c  module.dbus.c  module.dbus.connection.c  module.dbus.exceptions.c  module.dbus.lowlevel.c  module.dbus.mainloop.c  module.dbus.mainloop.glib.c  module.dbus.proxies.c  module.dbus.types.c  module.gi._compat.c  module.gi._constants.c  module.gi._error.c  module.gi._propertyhelper.c  module.gi._signalhelper.c  module.gi.c  module.gi.docstring.c  module.gi.importer.c  module.gi.module.c  module.gi.overrides.c  module.gi.repository.c  module.gi.types.c  module.packages.amazon_data_upload.c  module.packages.c  module.packages.image_upload.c  (+25 more)
Linux_Version/product_import.dist/: libX11.so.6  libXau.so.6  libXft.so.2  libacl.so.1  libattr.so.1  libblkid.so.1  libcap.so.2  libdbus-1.so.3  libelf.so.1  libfa.so.1  libfontconfig.so.1  libgcc_s.so.1  libgcrypt.so.20  libgio-2.0.so.0  (+6 more)
Upload/: sku_amazon_upload_2.csv
item_upload/: __main__.py  cli.py
tests/: test_price.py
(+76 files in other folders)
