[tool.poetry]
name = "item_upload"
version = "0.0.0"
description = "Upload items to Plentymarkets from an Amazon Flatfile."
authors = ["Sebastian Fricke <sebastian.fricke@panasiam.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"
loguru = "^0.5.3"
pandas = "^1.2.1"
chardet = "^4.0.0"
openpyxl = "^3.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
